CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("termbox-widgets")

SET(CMAKE_CXX_FLAGS "-std=c++2a -O3 -Wpedantic -Wall -fopenmp")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_COMPILE_DEFINITIONS(WITH_TRUECOLOR)

FILE(GLOB SOURCES
	"src/*.cpp"
	"src/*.tcc"
	"src/my/*.cpp"
	"src/my/*.tcc"
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})
ADD_SUBDIRECTORY("src/termbox")
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} libtermbox-static)
